# renderer-dog

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  renderer-go  renderer-go.cbp
include/: demo_sdl.h  demo_skia.h  renderer.h
src/: demo_sdl.cpp  demo_skia.cpp  renderer.cpp
